@@ -17,6 +17,12 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+server/apply.c: better to not create a treasure for spellbooks that already have
+    something in inventory. Else you get 2 spells in the book, which then
+    mutates when loading (first spell is the book's spell, and order changes every
+    load/save...)
+Ryo 2004-08-16
+
 Those changes mostly add an item stack for DMs. It makes it easier to dump & patch &
 manipulate items without having to copy numbers all the time.
 Basically, you can use '$x', meaning item at position x on stack. Or even
